# siduxcc

./: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  clean.sh  configure  configure.in  configure.in.in  subdirs
kde3/hermes/: CMakeLists.txt  Makefile.am  Makefile.in  cmake_install.cmake  hermes.cpp  hermes.h  main.cpp  systray.cpp  systray.h  unique.cpp
kde3/siduxcc/: CMakeLists.txt  Makefile.am  console.cpp  display.h  displaydialog.ui  info.h  infodialog.ui  internet.h  kernel.h  main.cpp  network.cpp  network.h  services.h  servicesdialog.ui  siduxcc-kde3.desktop  software.cpp  software.h  startdialog.ui
kde4/starter/: CMakeLists.txt  main.cpp  siduxcc-kde4.desktop  starter.cpp  starter.h  starter.ui
libsiduxcc/: Makefile.am  Makefile.in  process.cpp  process.h
network_kioslave/: Makefile.am  Makefile.in  generic_interface  kio_network.cpp  kio_network.h  network.protocol
network_kioslave/networkbin/: ath0  ath1  ath2  ath3  ath4  ath5  ath6  ath7  ath8  ath9  eth0  eth1  eth2  eth3  eth4  eth5  eth6  eth7  eth8  eth9  lan0  lan1  lan2  lan3  lan4  lan5  lan6  lan7  lan8  lan9  wlan0  wlan1  wlan2  wlan3  wlan4  wlan5  wlan6  wlan7  wlan8  wlan9
po/: CMakeLists.txt  Makefile.am  Makefile.in  Messages.sh  da.po  de.po  el.po  es.po  fr.po  hr.po  it.po  ja.po  kionetwork.pot  nl.po  pl.po  pt.po  ro.po  ru.po  siduxcc.pot  siduxccdisplay.pot  siduxcchardware.pot  siduxcchermes.pot  siduxccinfo.pot  siduxccinternet.pot  siduxcckde.pot  siduxcckernel.pot  siduxcckmain.pot  siduxccnetwork.pot  siduxccservices.pot  siduxccsoftware.pot
po/da/: Makefile.am  Makefile.in  kionetwork.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  siduxccsoftware.po
po/de/: Makefile.am  Makefile.in  kionetwork.po  kiosidux.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  siduxccsoftware.po
po/es/: Makefile.am  Makefile.in  kionetwork.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  siduxccsoftware.po
po/fr/: Makefile.am  Makefile.in  kionetwork.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  siduxccsoftware.po
po/hr/: Makefile.am  Makefile.in  kionetwork.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  siduxccsoftware.po
po/it/: Makefile.am  Makefile.in  kionetwork.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  siduxccsoftware.po
po/ja/: Makefile.am  Makefile.in  siduxcc.po  siduxcchermes.po  siduxcckde.po
po/jp/: Makefile.am  Makefile.in  siduxcchermes.po  siduxcckde.po
po/nl/: Makefile.am  Makefile.in  kionetwork.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  siduxccsoftware.po
po/pl/: Makefile.am  Makefile.in  kionetwork.po  siduxcc.po  siduxcchermes.po  siduxcckde.po
po/pt/: Makefile.am  Makefile.in  siduxcc.po  siduxcchermes.po  siduxcckde.po
po/ro/: Makefile.am  Makefile.in  kionetwork.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  siduxccsoftware.po
po/ru/: Makefile.am  Makefile.in  kionetwork.po  kiosidux.po  siduxcc.po  siduxccdisplay.po  siduxcchardware.po  siduxcchermes.po  siduxccinfo.po  siduxccinternet.po  siduxcckde.po  siduxcckernel.po  siduxcckmain.po  siduxccnetwork.po  siduxccservices.po  (+1 more)
sidux_kioslave/: Makefile.am  Makefile.in  kio_sidux.cpp  kio_sidux.h  sidux.protocol
siduxcc/: Makefile.am  Makefile.in  nicstatus  siduxcc
siduxcc_display/: Makefile.am  Makefile.in  displaydialog.ui  process.cpp  siduxcc_display.cpp  siduxcc_display.desktop  siduxcc_display.h
siduxcc_hardware/: Makefile.am  Makefile.in  hardwaredialog.ui  siduxcc_hardware.cpp  siduxcc_hardware.desktop  siduxcc_hardware.h
siduxcc_hermes/: Makefile.am  Makefile.in  gui.rc  hermes.cpp  hermes.h  hermesbase.ui  legend.cpp  legend.h  legendbase.ui  main.cpp  process.cpp  process.h  siduxcc-hermes.desktop  systray.cpp  systray.h  unique.h  up.cpp  up.h  upbase.ui  upgradable.cpp  upgradable.h  upgradablebase.ui
siduxcc_info/: Makefile.am  Makefile.in  infodialog.ui  main.cpp  siduxcc_info.cpp  siduxcc_info.desktop  siduxcc_info.h
siduxcc_internet/: Makefile.am  Makefile.in  internetdialog.ui  siduxcc_internet.cpp  siduxcc_internet.desktop  siduxcc_internet.h
siduxcc_kde3/: Makefile.am  Makefile.in  display.cpp  display.h  info.h  main.cpp  services.cpp  start.h
siduxcc_kernel/: Makefile.am  Makefile.in  displaydialog.ui  kerneldialog.ui  siduxcc_kernel.cpp  siduxcc_kernel.desktop  siduxcc_kernel.h
siduxcc_kmain/: Makefile.am  Makefile.in  kmaindialog.ui  main.cpp  siduxcc.desktop  siduxcc_kmain.cpp  siduxcc_kmain.h
siduxcc_network/: Makefile.am  Makefile.in  displaydialog.ui  networkdialog.ui  siduxcc_network.cpp  siduxcc_network.desktop  siduxcc_network.h
siduxcc_services/: Makefile.am  Makefile.in  displaydialog.ui  servicesdialog.ui  siduxcc_services.cpp  siduxcc_services.desktop  siduxcc_services.h
siduxcc_software/: Makefile.am  Makefile.in  displaydialog.ui  siduxcc_software.cpp  siduxcc_software.desktop  siduxcc_software.h  softwaredialog.ui  upgradable.cpp  upgradable.h
(+186 files in other folders)
