install( FILES acpid.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES alsa-utils.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES apache2.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES avahi-daemon.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES bluetooth.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES cron.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES cups.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES dbus.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES dhcdbd.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES dirmngr.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES gdm.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES gpm.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES hal.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES hdparm.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES hotkey-setup.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES kdm.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES keytouch.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES mysql.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES samba.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
install( FILES ssh.desktop DESTINATION ${DATA_INSTALL_DIR}/siduxcc/services )
